--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 
   <div class="wrapper">
 
-    <a class="site-title" href="{{ site.baseurl }}/"><img class="logo" src="{{ site.basurl }}/favicon-big.png" height=42 width=42>{{ site.title }}</a>
+    <a class="site-title" href="{{ site.baseurl }}/"><img class="logo" src="{{ site.baseurl }}/favicon-big.png" height=42 width=42>{{ site.title }}</a>
 
     <nav class="site-nav">
       <a href="#" class="menu-icon">
