--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -245,3 +245,19 @@
         }
     }
 }
+
+// File-Systems table
+.fs-table {
+	margin: 20px 0 20px;
+	border-spacing: 0px;
+
+	background: #eaeaea;
+	border-top: 1px solid #bababa;
+	border-bottom: 1px solid #bababa;
+
+	tr:first-of-type {
+		background: #D4D4D4;
+		font-weight: bold;
+	}
+}
+
